# tagamiAi

./: .gitignore  Cargo.toml  DESIGN.md  INSTALL.md  INVESTIGATION.md  README.md  capture.py  tagami.toml
.github/workflows/: build-windows.yml
src/: config.rs  main.rs  mem.rs  slack_api.rs  uia.rs  updater.rs  win32.rs
