[package]
name = "tagami"
version = "0.1.15"
edition = "2021"
description = "AI田上 PoC: Slack <-> Copilot for Windows via UI Automation"

[[bin]]
name = "tagami"
path = "src/main.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
eframe = "0.28"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Memory",
  "Win32_System_DataExchange",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Security_Cryptography",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
]
